Apply Glow effect on list items

--- a/app/src/main/res/layout/list_item_good.xml
+++ b/app/src/main/res/layout/list_item_good.xml
@@ -59,4 +59,9 @@
 
     </LinearLayout>
 
+    <ru.okmarket.okgoods.widgets.GlowView
+        android:id="@+id/glowView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </FrameLayout>
