--- a/app/src/main/res/layout/list_item_selected_good.xml
+++ b/app/src/main/res/layout/list_item_selected_good.xml
@@ -1,67 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
+
+    <ru.okmarket.okgoods.widgets.GlowView
+        android:id="@+id/glowView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/common_margin"
-        android:layout_marginTop="@dimen/common_margin"
-        android:layout_marginRight="@dimen/common_margin"
-        android:layout_marginBottom="@dimen/common_margin"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/goodNameTextView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="100"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/common_margin"
+            android:layout_marginTop="@dimen/common_margin"
             android:layout_marginRight="@dimen/common_margin"
-            android:layout_marginEnd="@dimen/common_margin"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1"
-            android:gravity="start|center_vertical" />
+            android:layout_marginBottom="@dimen/common_margin"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/costTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1"
-            android:gravity="start|center_vertical" />
+            <TextView
+                android:id="@+id/goodNameTextView"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:layout_marginRight="@dimen/common_margin"
+                android:layout_marginEnd="@dimen/common_margin"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:maxLines="1"
+                android:gravity="start|center_vertical" />
+
+            <TextView
+                android:id="@+id/costTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:maxLines="1"
+                android:gravity="start|center_vertical" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/expandedView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/common_margin"
+            android:layout_marginRight="@dimen/common_margin"
+            android:layout_marginBottom="@dimen/common_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/secondCostTextView"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:layout_marginRight="@dimen/common_margin"
+                android:layout_marginEnd="@dimen/common_margin"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:maxLines="1"
+                android:gravity="end|center_vertical" />
+
+            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
+                android:id="@+id/goodDetailsButton"
+                android:layout_width="@dimen/good_details_button_size"
+                android:layout_height="@dimen/good_details_button_size"
+                android:contentDescription="@string/main_good_details"
+                android:src="@drawable/good_details"
+                android:scaleType="centerInside" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/expandedView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/common_margin"
-        android:layout_marginRight="@dimen/common_margin"
-        android:layout_marginBottom="@dimen/common_margin"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/secondCostTextView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="100"
-            android:layout_marginRight="@dimen/common_margin"
-            android:layout_marginEnd="@dimen/common_margin"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1"
-            android:gravity="end|center_vertical" />
-
-        <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
-            android:id="@+id/goodDetailsButton"
-            android:layout_width="@dimen/good_details_button_size"
-            android:layout_height="@dimen/good_details_button_size"
-            android:contentDescription="@string/main_good_details"
-            android:src="@drawable/good_details"
-            android:scaleType="centerInside" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
